--- a/blogstyle.css
+++ b/blogstyle.css
@@ -6,13 +6,16 @@
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif; 
     text-align: center; 
-    font-size: 50px; 
+    font-size: 65px; 
     padding-top: 20px;
+    font-family: PlayfairDisplay;
 }
 
 p {
     text-align: justify; 
     font-size: 20px;
+    line-height: 35px;
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
 
 h2 {
@@ -22,8 +25,8 @@ h2 {
 }
 
 body {
-    padding-left: 375px; 
-    padding-right: 375px;
+    padding-left: 380px; 
+    padding-right: 380px;
 }
 
 p {
@@ -33,5 +36,5 @@ p {
 }
 
 img {
-    width: 500px;
+    width: 700px;
 }
